@@ -1,3 +1,15 @@
+June 1, 2023   - **v4.0.7**
+                 * Fixed an error related with the shifts(shifts were not being calculated)
+                 * Cheking the shifts in a test
+                 * Taking the rlnOriginXAngst, rlnOriginYAngst and rlnOriginZAngst
+                   values from .star file generated by pyem library and using them to
+                   calculate the particles shifts
+
+May 26, 2023   - **v4.0.6**
+                 Compatibility with cryoSPARC v4.2.1
+                 Plugin operation in a cluster
+                 Fixed an installation error
+
 May 26, 2023   - **v4.0.5**
                  Plugin operation in a cluster
                  Fixed an installation error
